# serwebs

./: .dockerignore  .gitignore  .gitlab-ci.yml  COMPARISON.md  DOCKERHUB.md  Dockerfile  README.md  backends.yaml.example  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  auth.js  macros.js  terminal.js  ws.js
serwebs/: __main__.py  aggregator.py  alerting.py  app.py  audit.py  auth.py  config.py  models.py  port_manager.py  recording.py  routes_api.py  routes_ws.py  serial_worker.py  session_logger.py  ssh_gateway.py  syslog_handler.py  telnet_gateway.py  utils.py  ws_manager.py
